--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <title>TatarLingo</title>
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
